--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,cmake
 
+out/
+
 ### CMake ###
 CMakeLists.txt.user
 CMakeCache.txt
